tests/testcases/tickets/Jira3045.cfc
<cfscript>
component extends="org.railo.cfml.test.RailoTestCase"	{

	//public function setUp(){}

	public void function test(){
		http method="get" result="local.result" url="#createURL("Jira3045/index.cfm")#" addtoken="false";
		var expires={};
		loop query="#result.cookies#" {
			expires[result.cookies.name]=result.cookies.expires;
		}
		assertEquals(expires.test1,expires.test2);

		/*
		
		
		try{
			// error
			fail("");
		}
		catch(local.exp){}*/
	}
	
	private string function createURL(string calledName){
		var baseURL="http://#cgi.HTTP_HOST##getDirectoryFromPath(contractPath(getCurrenttemplatepath()))#";
		return baseURL&""&calledName;
	}
	
} 
</cfscript>